errors and last fixes
