# project/routes/league.js
@@ -2,14 +2,12 @@ var express = require("express");
 var router = express.Router();
 const league_utils = require("./utils/league_utils");
 const auth_utils = require("./utils/auth_utils");
-const { classMethod } = require("@babel/types");
 
 router.use("", async function(req, res, next) {
     let status = auth_utils.get_curr_user_login_permoission()
-    if(status == null){
+    if (status == null) {
         res.sendStatus(401);
-    }
-    else{
+    } else {
         next();
     }
 });
@@ -45,12 +43,11 @@ router.use("", async function(req, res, next) {
     if (status) {
         next();
     } else {
-        if(status == null){
+        if (status == null) {
             res.sendStatus(401);
-        }
-        else if(status == false){
+        } else if (status == false) {
             res.sendStatus(403);
-        }        
+        }
     }
 });
 
@@ -63,47 +60,44 @@ router.get("/add&getRandFutureGames", async(req, res, next) => {
     }
 });
 
-// router.get("/add&getRandPastGames", async(req, res, next) => {
-//     try {
-//         const game_details = await league_utils.getPastGameDetailsFromAPI();
-//         res.send(game_details);
-//     } catch (error) {
-//         next(error);
-//     }
-// });
-
-router.post("/addNewLeague/:league_name", async(req, res, next) => {
+router.get("/add&getRandPastGames", async(req, res, next) => {
     try {
-        const league = await league_utils.createNewLeague(req.body.league_name);
-        // const league_details = await league_utils.addDetailsToLeague();
-        res.send(league);
+        const game_details = await league_utils.getPastGameDetailsFromAPI();
+        res.send(game_details);
     } catch (error) {
         next(error);
     }
 });
 
-router.get("/getAllreferees", async (req, res, next) =>{
-    try{
+router.post("/addNewLeague", async(req, res, next) => {
+    try {
+        await league_utils.createNewLeague(req.body.league_name);
+        // const league_details = await league_utils.addDetailsToLeague();
+        res.status(201).send("ok");
+    } catch (error) {
+        next(error);
+    }
+});
+
+router.get("/getAllreferees", async(req, res, next) => {
+    try {
         const free_referee = await league_utils.getAllreferees();
         res.send(free_referee);
-    }
-    catch(error){
+    } catch (error) {
         next(error);
-    }    
+    }
 })
 
-router.post("/addReferee", async(req, res, next)=>{
-    try{
+router.post("/addReferee", async(req, res, next) => {
+    try {
         const result = await league_utils.addReferee(req.body.firstName, req.body.lastName, req.body.qualification);
         res.send(result);
-    }catch(error){
+    } catch (error) {
         next(error);
     }
 })
-// router.post("/insertNewGame/:date/:time/:league_name/:home_team_name/:away_team_name/:field", async(req, res, next) => {
 router.post("/insertNewGame", async(req, res, next) => {
     try {
-        // const free_referee = await league_utils.getAllreferees();
         const new_game_details = await league_utils.insertNewGame(
             req.body.date,
             req.body.time,
@@ -118,11 +112,5 @@ router.post("/insertNewGame", async(req, res, next) => {
         next(error);
     }
 });
-
-// router.use("", async(err, req,res,next)=>{
-//     if()
-// });
-
-
 
 module.exports = router;
